--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>projeto</title>
+        <link rel="stylesheet" href="css/estilo.css">
     </head>
     <body>
-        <h1>Projeto do Arthur Marques</h1>
+        <h1>Git</h1>
+
+        <p>
+            um curso que explora os beneficios de utilizar o git como ferramenta de controle
+            de versão para projetos em qualquer linguagem, em qualquer plataforma.
+        </p>
     </body>
 </html>
